# exS3-mix

./: .gitmodules  LICENSE  README.md
3D model/: README.md
3D model/pico/: bottom.stl  switch.stl
Hardware/3D model/: README.md  key.stl  middle.stl  top.stl
Hardware/3D model/gcode/: bottom_0.15mm_51m.gcode  bottom_0.15mm_53mQ.gcode  key_0.15mm_2m.gcode  key_0.15mm_2mQ.gcode  middle_0.15mm_31m.gcode  middle_0.15mm_33mQ.gcode  switch_0.15mm_5m.gcode  switch_0.15mm_5mQ.gcode  switch_0.15mm_6m_suppost.gcode  top_0.15mm_42m.gcode  top_0.15mm_44mQ.gcode
Hardware/exS3/: 3D_exS3.step
PCB/: README.md
Software/smartIR/: .gitignore  CMakeLists.txt  README.md
Software/smartIR-pico/: README.md  sdkconfig  sdkconfig.old
Software/smartIR-pico/components/GUI/: CMakeLists.txt
Software/smartIR-pico/components/GUI/app/common/: lv_common.c  lv_common.h
Software/smartIR-pico/components/GUI/app/font/: font_LMYY.c
Software/smartIR-pico/components/GUI/app/img/: astronaut1.c  astronaut11.c  astronaut7.c  astronaut9.c  logo_ac.c  logo_fan.c  logo_kaiguan.c  logo_setting.c
Software/smartIR-pico/components/GUI/app/page/: ac_page.c  fan_page.c  fan_page.h  main_page.c  setting_page.c
Software/smartIR-pico/components/GUI/port/: lv_port_disp.c  lv_port_disp.h  lv_port_indev.c  lv_port_indev.h  lv_task.c  lv_task.h
Software/smartIR-pico/components/IR/: CMakeLists.txt  ir_nvs.c  ir_nvs.h  ir_rmt.c  ir_rmt.h
Software/smartIR-pico/components/IR/decode/include/: ir_decode.h
Software/smartIR-pico/components/IR/decode/src/: ir_ac_apply.c  ir_ac_build_frame.c  ir_ac_control.c  ir_ac_parse_forbidden_info.c  ir_decode.c  ir_utils.c
Software/smartIR-pico/components/axp173/: axp173.c  axp173.h
Software/smartIR-pico/components/bus/: CMakeLists.txt  i2c_app.c  i2c_app.h  i2c_bus.c  i2c_bus.h
Software/smartIR-pico/components/bus/test/: CMakeLists.txt  i2c_bus_test.c
Software/smartIR-pico/components/lvgl/: CMakeLists.txt  lv_conf.h
Software/smartIR-pico/components/lvgl/env_support/cmake/: esp.cmake
Software/smartIR-pico/components/lvgl_drivers/: CMakeLists.txt  driver_conf.h
Software/smartIR-pico/components/lvgl_drivers/tft/: disp_spi.c  disp_spi.h  st7789.c
Software/smartIR-pico/components/lvgl_drivers/touch/: ft6236.c  ft6236.h
Software/smartIR-pico/components/mpu6050/: CMakeLists.txt  mpu6050.c  mpu6050.h
Software/smartIR-pico/components/mpu6050/test/: 6050_test.c  CMakeLists.txt
Software/smartIR-pico/components/storage/: CMakeLists.txt  sd_spi_fatfs.c  sd_spi_fatfs.h
Software/smartIR-pico/main/: main.c
Software/smartIR/components/GUI/: CMakeLists.txt
Software/smartIR/components/GUI/app/anim/: anim.c  anim.h
Software/smartIR/components/GUI/app/common/: lv_common.c  lv_common.h
Software/smartIR/components/GUI/app/font/: HmOS_35px.c  HmOS_45pxnum.c  font_time.c  font_time2.c
Software/smartIR/components/GUI/app/img/: astronaut1.c  astronaut10.c  astronaut11.c  astronaut12.c  astronaut13.c  astronaut14.c  astronaut2.c  astronaut3.c  astronaut4.c  astronaut5.c  astronaut6.c  astronaut7.c  astronaut8.c  astronaut9.c  loadimg1.c  loadimg2.c  loadimg3.c  loadimg4.c  logo_return.c
Software/smartIR/components/GUI/app/page/: ac_page.c  ac_page.h  ctrl_page.c  ctrl_page.h  fan_page.c  fan_page.h  info_page.c  info_page.h  main_page.c  main_page.h  setting_page.c  setting_page.h  start_page.c  start_page.h
Software/smartIR/components/GUI/app/widgets/: notify_bar.c  notify_bar.h
Software/smartIR/components/GUI/port/: lv_port_disp.c  lv_port_indev.c  lv_task.c  lv_task.h
Software/smartIR/components/axp173/: CMakeLists.txt  axp173.c  axp173.h  axp173_intr.h  axp173_reg.h  axp173_type.h
Software/smartIR/components/bus/: CMakeLists.txt  i2c_bus.c  i2c_bus.h  spi_bus.c  spi_bus.h
Software/smartIR/components/lvgl/: lv_conf.h
Software/smartIR/components/lvgl_drivers/: driver_conf.h
Software/smartIR/components/lvgl_drivers/tft/: disp_driver.c  disp_driver.h  pwm_backlight.c  pwm_backlight.h  st7789.c  st7789.h  st7789_bl.c  st7789_bl.h  st7789_reg.h
Software/smartIR/components/network/: CMakeLists.txt
Software/smartIR/components/network/time/: time_ntp.c  time_ntp.h
Software/smartIR/components/network/wifi/: wifi.c  wifi.h
Software/smartIR/components/storage/: CMakeLists.txt  mNVS.c  mNVS.h  sd_card.c  sd_card.h  sd_spi_fatfs.h
Software/smartIR/components/widgets/: CMakeLists.txt  Kconfig  widgets_conf.h
Software/smartIR/components/widgets/button/: button.c  button.h
Software/smartIR/components/widgets/encoder/: encoder.c  encoder.h  encoder_button.c  encoder_button.h  hal_enc.c  hal_enc.h  pwm_bl.c  pwm_bl.h  rot_enc.c  rot_enc.h
Software/smartIR/components/widgets/led/: led.c  led.h
Software/smartIR/components/widgets/motor/: motor.c  motor.h
Software/smartIR/components/widgets/vmotor/: vmotor.c  vmotor.h
Software/smartIR/docs/: note.md
Software/smartIR/main/: main.c
(+7 files in other folders)
